src/tests/ci/assignment_3_arrays_io_llvm/valid/03_array_2d.c
int main() {
    int matrix[2][2] = {{1, 2}, {3, 4}};
    return matrix[1][0];
}
