src/tests/ci/assignment_3_arrays_io_llvm/invalid_semantic/03_array_index_pointer.c
int main() {
    int values[3] = {1, 2, 3};
    int* p = &values[0];
    return values[p];
}
